Fix spacing for smaller widths

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -195,7 +195,7 @@ ul.features-list hr {
     flex-direction: row-reverse;
     min-height: 300px;
     height: 730px;
-    margin: 240px 0;
+    margin: 0 0 120px 0;
     justify-content: flex-end;
   }
 
